# mooeye

./: Cargo.toml  LICENSE  README.md
examples/: README.md
examples/ui_examples/: README.md  a_setup.rs  b_scene.rs  c_uielement.rs  d_containers.rs  e_messages.rs  f_sprites.rs  g_selector_scene.rs  g_transitions.rs  i_selector_scene.rs  main.rs  resources.tar
resources/: README.md  mage.aseprite  moo.aseprite  pi.aseprite  sprites.txt
src/: lib.rs  scene_manager.rs  sprite.rs  transition_manager.rs  ui.rs  ui_element.rs
src/basic/: empty_element.rs  image_element.rs  mod.rs  text_element.rs
src/containers/: duration_box.rs  grid_box.rs  horizontal_box.rs  mod.rs  stack_box.rs  vertical_box.rs
src/ui/: draw_cache.rs  layout.rs  transition.rs  ui_draw_param.rs  ui_element.rs  ui_element_builder.rs  visuals.rs
src/ui/basic/: empty_element.rs  image_element.rs  mod.rs  text_element.rs
src/ui/containers/: duration_box.rs  grid_box.rs  horizontal_box.rs  mod.rs  stack_box.rs  vertical_box.rs
src/ui_element/: draw_cache.rs  layout.rs  message.rs  transition.rs  ui_draw_param.rs  ui_element_builder.rs  visuals.rs
tests/: README.md
tests/ui_tests/: main.rs  scene_1.rs  scene_2.rs
