[package]
name = "mooeye"
version = "0.4.1"
edition = "2021"
authors = ["Linus Mußmächer linus.mussmaecher@gmail.com"]
license = "MIT"
description = "A small UI library designed on top of the ggez game library. WORK IN PROGRESS"
readme = "README.md"
repository = "https://github.com/Linus-Mussmaecher/mooeye"
homepage = "https://github.com/Linus-Mussmaecher/mooeye"
keywords = ["UI", "ggez", "game-development", "static-UI", "game"]

[dependencies]
good-web-game = "0.6"
tinyvec = {version = "1.6.0", features = ["alloc"]}
regex = "1.7.3"
glam = "0.24"


# Tests. GGEZ panicks when creating an event loop outside of the main thread, so we have to disable the cargo test harness to force this tests onto the main thread.
# This disables the usual testing output, but since tests are mostly visual checks or panic checks (since most functions cant be tested for their 'output'), we at least get an easy way to start a gui window with cargo test.
[[example]]
name = "ui-examples"
path = "examples/ui_examples/main.rs"